--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,7 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <script src="/assets/app_[hash].js"></script>
+  <script src="/assets/app.js"></script>
 </head>
 
 <body>
   <div id="app"></div>
 </body>
+</html>
