--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script src="/assets/app.js"></script>
 </head>
 
 <body>
   <div id="app"></div>
+  <script type="text/javascript" src="/app.js"></script>
 </body>
 </html>
