--- a/app/src/index.html
+++ b/app/src/index.html
@@ -9,6 +9,9 @@
 
 <body>
   <div id="app"></div>
-  <script type="text/javascript" src="/assets/app.js"></script>
+  <% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
+  <script type="text/javascript" src="assets/<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
+  <% } %>
+
 </body>
 </html>
