--- a/app/src/index.html
+++ b/app/src/index.html
@@ -4,7 +4,10 @@
   <meta
     name="viewport"
     content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1"
-    >
+    />
+  <% for (var css in htmlWebpackPlugin.files.css) { %>
+  <link rel="stylesheet" type="text/css" href="assets/<%= htmlWebpackPlugin.files.css[css] %>">
+  <% } %>
 </head>
 
 <body>
