--- a/app/src/index.html
+++ b/app/src/index.html
@@ -8,6 +8,7 @@
   <% for (var css in htmlWebpackPlugin.files.css) { %>
   <link rel="stylesheet" type="text/css" href="assets/<%= htmlWebpackPlugin.files.css[css] %>">
   <% } %>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 </head>
 
 <body>
