--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1"
-    />
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1" />
+  <meta name="x-site-configuration" content="{{.}}" />
   <% for (var css in htmlWebpackPlugin.files.css) { %>
   <link rel="stylesheet" type="text/css" href="assets/<%= htmlWebpackPlugin.files.css[css] %>">
   <% } %>
@@ -19,4 +19,5 @@
   <% } %>
 
 </body>
+
 </html>
